--- a/site/config.toml
+++ b/site/config.toml
@@ -3,6 +3,9 @@ languageCode = "en-us"
 languageLang = "en"
 title = "Homepage"
 
+[params]
+  description = "Flores Tree Service, a Tree Trimming and Tree Removal Company"
+
 # RSS, categories and tags disabled for an easy start
 # See configuration options for more details: 
 # https://gohugo.io/getting-started/configuration/#toml-configuration
