--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,11 @@
 
 [context.deploy-preview]
   command = "yarn build:preview"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
