--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -37,7 +37,7 @@ collections: # A list of collections the CMS should be able to edit
           - {label: "Services", name: "services", widget: "object", fields: [
               {label: "Heading", name: "heading", widget: string},
               {label: "Text", name: "text", widget: "text"}]}
-          - {label: Testimonials, name: testimonials, widget: list, fields: [{label: Quote, name: quote, widget: string}, {label: Author, name: author, widget: string}]}
+          - {label: Reviews, name: reviews, widget: list, fields: [{label: Quote, name: quote, widget: string}, {label: Author, name: author, widget: string}]}
 
       - file: "site/content/contact/_index.md"
         label: "Contact Page"
