CSS and title edit

--- a/site/config.toml
+++ b/site/config.toml
@@ -1,7 +1,7 @@
 baseurl = "/"
 languageCode = "en-us"
 languageLang = "en"
-title = "Homepage"
+title = "Dallas-Fort Worth, TX"
 
 [params]
   description = "Dallas/Fort Worth Expert Tree Service - Trust the leaders in tree care for all your needs. From tree trimming to removal and storm damage assistance, our professionals handle it all. Experience exceptional workmanship and unmatched expertise. Contact us today for comprehensive tree services you can rely on."
